syntax = "proto3";

package cart;

option go_package = "jumia-clone-backend/services/cart-service/proto";

service CartService {
    rpc AddToCart(AddToCartRequest) returns (AddToCartResponse);
    rpc UpdateCartItem(UpdateCartItemRequest) returns (UpdateCartItemResponse);
    rpc RemoveFromCart(RemoveFromCartRequest) returns (RemoveFromCartResponse);
    rpc GetCart(GetCartRequest) returns (GetCartResponse);
    rpc ClearCart(ClearCartRequest) returns (ClearCartResponse);
}

// Add to Cart
message AddToCartRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
    double price = 4;
    string product_name = 5;
    string image_url = 6;
}

message AddToCartResponse {
    string message = 1;
    bool success = 2;
    CartData cart = 3;
}

// Update Cart Item
message UpdateCartItemRequest {
    string user_id = 1;
    string product_id = 2;
    int32 quantity = 3;
}

message UpdateCartItemResponse {
    string message = 1;
    bool success = 2;
    CartData cart = 3;
}

// Remove from Cart
message RemoveFromCartRequest {
    string user_id = 1;
    string product_id = 2;
}

message RemoveFromCartResponse {
    string message = 1;
    bool success = 2;
    CartData cart = 3;
}

// Get Cart
message GetCartRequest {
    string user_id = 1;
}

message GetCartResponse {
    CartData cart = 1;
    bool success = 2;
    string message = 3;
}

// Clear Cart
message ClearCartRequest {
    string user_id = 1;
}

message ClearCartResponse {
    bool success = 1;
    string message = 2;
}

// Cart Data
message CartData {
    string id = 1;
    string user_id = 2;
    repeated CartItemData items = 3;
    double total_price = 4;
    int32 total_items = 5;
    string created_at = 6;
    string updated_at = 7;
}

// Cart Item Data
message CartItemData {
    string id = 1;
    string product_id = 2;
    string product_name = 3;
    int32 quantity = 4;
    double price = 5;
    double subtotal = 6;
    string image_url = 7;
}