syntax = "proto3";

package product;

option go_package = "jumia-clone-backend/services/product-service/proto";

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
    rpc GetProduct(GetProductRequest) returns (GetProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
    rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
    rpc SearchProducts(SearchProductsRequest) returns (SearchProductsResponse);
    rpc GetProductsByCategory(GetProductsByCategoryRequest) returns (GetProductsByCategoryResponse);
    rpc GetFlashSaleProducts(GetFlashSaleProductsRequest) returns (GetFlashSaleProductsResponse);
}

// Create Product
message CreateProductRequest {
    string name = 1;
    string description = 2;
    double price = 3;
    string category = 4;
    int32 stock = 5;
    string image_url = 6;
    string brand = 7;
    double discount_percentage = 8;
    bool is_flash_sale = 9;
    double flash_sale_price = 10;
    string flash_sale_end_time = 11;
    int32 initial_stock = 12;
}

message CreateProductResponse {
    string id = 1;
    string message = 2;
    bool success = 3;
}

// Get Product
message GetProductRequest {
    string id = 1;
}

message GetProductResponse {
    ProductData product = 1;
    bool success = 2;
    string message = 3;
}

// Update Product
message UpdateProductRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string category = 5;
    int32 stock = 6;
    string image_url = 7;
    string brand = 8;
    double discount_percentage = 9;
    bool is_flash_sale = 10;
    double flash_sale_price = 11;
    string flash_sale_end_time = 12;
    int32 initial_stock = 13;
}

message UpdateProductResponse {
    bool success = 1;
    string message = 2;
    ProductData product = 3;
}

// Delete Product
message DeleteProductRequest {
    string id = 1;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}

// List Products
message ListProductsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message ListProductsResponse {
    repeated ProductData products = 1;
    int32 total = 2;
    bool success = 3;
    string message = 4;
}

// Search Products
message SearchProductsRequest {
    string query = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message SearchProductsResponse {
    repeated ProductData products = 1;
    int32 total = 2;
    bool success = 3;
    string message = 4;
}

// Get Products by Category
message GetProductsByCategoryRequest {
    string category = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message GetProductsByCategoryResponse {
    repeated ProductData products = 1;
    int32 total = 2;
    bool success = 3;
    string message = 4;
}

// Get Flash Sale Products
message GetFlashSaleProductsRequest {
    int32 page = 1;
    int32 page_size = 2;
}

message GetFlashSaleProductsResponse {
    repeated ProductData products = 1;
    int32 total = 2;
    bool success = 3;
    string message = 4;
}

// Product Data
message ProductData {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    string category = 5;
    int32 stock = 6;
    string image_url = 7;
    string brand = 8;
    double discount_percentage = 9;
    double final_price = 10;
    bool in_stock = 11;
    string created_at = 12;
    string updated_at = 13;
    bool is_flash_sale = 14;
    double flash_sale_price = 15;
    string flash_sale_end_time = 16;
    int32 initial_stock = 17;
    int32 flash_sale_progress = 18;
    bool is_flash_sale_active = 19;
}